--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div id="header">
       <div class="title">
         <h1> I'M ANDY TRUONG </h1>
-        <p>  THIRD YEAR BUSINESS TECHNOLOGY MANAMGENT STUDENT. </p>
+        <p>  THIRD YEAR BUSINESS TECHNOLOGY MANAGEMENT STUDENT. </p>
       </div>
     </div>
 
