--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
           Hello! I'm Andy Truong, and I am a third year business technology student 
 		  at Ryerson University. Classes I have taken helped me explore the field of both 
 		  Information Technology and Business. I am experienced with 
-		  Enterprise Architecture, Microsoft SQL, Java, SPSS, Microsoft Visio, and Microsoft Excel.</br></br> I'm
-          enthusiastic about the field of IT.
+		  Enterprise Architecture, Microsoft SQL, Java, SPSS, Microsoft Visio, and Microsoft Excel.</br></br> IT Enthusiast.
           </p>
       </div>
     </div>
