--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <div id="header">
       <div class="title">
-        <h1> I'M HAMZA RASHAD </h1>
+        <h1> I'M ANDY TRUONG </h1>
         <p>  THIRD YEAR BUSINESS TECHNOLOGY MANAGEMENT STUDENT. </p>
       </div>
     </div>
