--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="six columns">
           <p class="exp-desc">
             <ul>
-              <li>Trained in Level A-CPR</li>
+              <li>Trained in Level A/A+ CPR</li>
               <li>Responsible for maintaining barricades for restricted areas</li>
               <li> Developed the ability to work remarkably well under time constraints by allocating time towards specific tasks</li>
             </ul>
