--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       <div class="offset-by-two eight columns">
         <ul class="contact-links">
 	        <li><a id="email" value="ndtrng@gmail.com" data-clipboard-target="#email"><i class="fa fa-envelope-o"></i>ndtrng@gmail.com </a></li>
-	        <li><a href="https://www.linkedin.com/in/andy-truong-79257b13b/"><i class="fa fa-linkedin"></i>andytruong</a></li>
+	        <li><a href="https://www.linkedin.com/in/andy-truong-79257b13b/"><i class="fa fa-linkedin"></i>truong-andy</a></li>
           <li><a href="AT-resume.pdf"><i class="fa fa-file-text-o"></i>resume</a></li>
         </ul>
       </div>
