--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <h4> About Me </h4>
       <div class="offset-by-three columns six">
           <p class="centered" >
-          Hello! I'm Andy Truong, and I am a third year business technology student 
+          Hello! I'm Andy Truong, and I am a fourth year business technology student 
 		  at Ryerson University. Classes I have taken helped me explore the field of both 
 		  Information Technology and Business. I am experienced with 
 		  Enterprise Architecture, Microsoft SQL, Java, SPSS, Microsoft Visio, and Microsoft Excel.</br></br> IT Enthusiast.
