--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs -->
   <meta charset="utf-8">
   <title> andy truong </title>
-  <meta name="description" content="Andy Truong is a 3rd Year BTM Student currently studying at the Ryerson University.">
+  <meta name="description" content="Andy Truong is a 4th Year BTM Student currently studying at the Ryerson University.">
   <meta name="author" content="Andy Truong">
 
   <!-- Mobile Specific Metas -->
@@ -42,7 +42,7 @@
     <div id="header">
       <div class="title">
         <h1> I'M ANDY TRUONG </h1>
-        <p>  THIRD YEAR BUSINESS TECHNOLOGY MANAGEMENT STUDENT. </p>
+        <p>  FOURTH YEAR BUSINESS TECHNOLOGY MANAGEMENT STUDENT. </p>
       </div>
     </div>
 
